adding mongodb